--- a/app/views/home/_my_month_knocks.html.erb
+++ b/app/views/home/_my_month_knocks.html.erb
@@ -41,9 +41,9 @@
             </td>
             <td style="text-align:left">
               <% if !element.blank? && !element.description.blank? %>
-                  <input type="text"  style="width:100%"  name="<%= @year%>-<%= @month%>-<%= index + 1 %>" value="<%=element.description%>  ">
+                  <input type="text"  style='width:25em'  name="<%= @year%>-<%= @month%>-<%= index + 1 %>" value="<%=element.description%>  ">
                   <%else%>
-                  <input type="text"  value="" style="display: none" name="<%= @year%>-<%= @month%>-<%= index + 1 %>">
+                  <input type="text"  value="" style="display: none;width:25em" name="<%= @year%>-<%= @month%>-<%= index + 1 %>">
               <% end %>
 
             </td>
