--- a/app/views/home/team_house.html.erb
+++ b/app/views/home/team_house.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <div style="width: 55%; margin:auto ; text-align: center">
-  <span id ="goBack"  > <img  src="/images/1385638301_gtk-go-back-ltr.png"  onmouseover="this.style.cursor='pointer';this.style.cursor='hand'" onmouseout="this.style.cursor='default'" /> </span>
+  <span id ="goBack"  > <img  src="/images/go-back.png"  onmouseover="this.style.cursor='pointer';this.style.cursor='hand'" onmouseout="this.style.cursor='default'" /> </span>
   <select id ="year_select" style="width: 70px;margin-top: 10px">
     <option value="2013">2013</option>
     <option value="2014">2014</option>
@@ -28,7 +28,7 @@
   </select>
 
   <select id ="day_select" style="width: 70px;margin-top: 10px">
-  </select>     <span id ="nextDay" > <image src="/images/1385638234_go-next.png"  onmouseover="this.style.cursor='pointer';this.style.cursor='hand'" onmouseout="this.style.cursor='default'" /> </span>
+  </select>     <span id ="nextDay" > <image src="/images/go-next.png"  onmouseover="this.style.cursor='pointer';this.style.cursor='hand'" onmouseout="this.style.cursor='default'" /> </span>
 
 
 
@@ -38,7 +38,6 @@
   <%= render :partial => "home/team_day_knocks" %>
 </div>
 
-<script src="/js/codreamUtility.js"></script>
 <script>
 
     $(document).ready(function(){
